crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__alternations_tests__alternation_in_field.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/alternations_tests.rs
---
Q = (call
    arguments: [(string) (number)]
)
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "call"
      Field
        Id "arguments"
        Colon ":"
        Alt
          BracketOpen "["
          Branch
            Tree
              ParenOpen "("
              Id "string"
              ParenClose ")"
          Branch
            Tree
              ParenOpen "("
              Id "number"
              ParenClose ")"
          BracketClose "]"
      ParenClose ")"
