crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__alternations_tests__alternation_with_anonymous.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/alternations_tests.rs
---
Q = ["true" "false"]
---
Root
  Def
    Id "Q"
    Equals "="
    Alt
      BracketOpen "["
      Branch
        Str
          DoubleQuote "\""
          StrVal "true"
          DoubleQuote "\""
      Branch
        Str
          DoubleQuote "\""
          StrVal "false"
          DoubleQuote "\""
      BracketClose "]"
