crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__alternations_tests__tagged_alternation_nested.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/alternations_tests.rs
---
Q = (expr
    [
        Binary: (binary_expression)
        Unary: (unary_expression)
    ])
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "expr"
      Alt
        BracketOpen "["
        Branch
          Id "Binary"
          Colon ":"
          Tree
            ParenOpen "("
            Id "binary_expression"
            ParenClose ")"
        Branch
          Id "Unary"
          Colon ":"
          Tree
            ParenOpen "("
            Id "unary_expression"
            ParenClose ")"
        BracketClose "]"
      ParenClose ")"
