crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__alternations_tests__tagged_alternation_simple.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/alternations_tests.rs
---
Q = [
    Ident: (identifier)
    Num: (number)
]
---
Root
  Def
    Id "Q"
    Equals "="
    Alt
      BracketOpen "["
      Branch
        Id "Ident"
        Colon ":"
        Tree
          ParenOpen "("
          Id "identifier"
          ParenClose ")"
      Branch
        Id "Num"
        Colon ":"
        Tree
          ParenOpen "("
          Id "number"
          ParenClose ")"
      BracketClose "]"
