crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__alternations_tests__tagged_alternation_single_line.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/alternations_tests.rs
---
Q = [A: (a) B: (b) C: (c)]
---
Root
  Def
    Id "Q"
    Equals "="
    Alt
      BracketOpen "["
      Branch
        Id "A"
        Colon ":"
        Tree
          ParenOpen "("
          Id "a"
          ParenClose ")"
      Branch
        Id "B"
        Colon ":"
        Tree
          ParenOpen "("
          Id "b"
          ParenClose ")"
      Branch
        Id "C"
        Colon ":"
        Tree
          ParenOpen "("
          Id "c"
          ParenClose ")"
      BracketClose "]"
